--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,9 @@
         "sort-packages": true
     },
     "autoload": {
+        "files": [
+            "src/Prismic/common.php"
+        ],
         "psr-4": {
             "Prismic\\": "src/Prismic"
         }
@@ -42,7 +45,7 @@
     },
 
     "require-dev": {
-        "phpstan/phpstan": "^0.9.2",
+        "phpstan/phpstan": "^0.11",
         "phpunit/phpunit": "^7",
         "squizlabs/php_codesniffer": "^3.2"
     },
