--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,8 @@
             "Prismic\\Test\\": "tests/Prismic"
         }
     },
-
     "license": "Apache-2.0",
-
     "minimum-stability": "stable",
-
     "require": {
         "php": ">=7.3",
         "ext-curl": "*",
@@ -30,20 +27,18 @@
         "guzzlehttp/guzzle": "^6.3",
         "psr/cache": "^1.0",
         "symfony/cache": "^4",
-        "zendframework/zend-escaper": "^2.6"
+        "laminas/laminas-escaper": "^2.6"
     },
-
     "suggest": {
         "ext-apc": "APCu is used as the default cache if it is available"
     },
-
     "replace": {
         "prismic/php-sdk": "*"
     },
-
     "require-dev": {
-        "phpstan/phpstan": "^0.9.2",
-        "phpunit/phpunit": "^7",
+        "roave/security-advisories":"dev-master",
+        "phpstan/phpstan": "^0.12",
+        "phpunit/phpunit": "^9",
         "squizlabs/php_codesniffer": "^3.2"
     },
     "extra": {
