--- a/.gitattributes
+++ b/.gitattributes
@@ -1,9 +1,7 @@
-/.editorconfig export-ignore
 /.gitattributes export-ignore
 /.gitignore export-ignore
-/.travis.yml export-ignore
+/.github export-ignore
 /composer.lock export-ignore
 /phpcs.xml export-ignore
-/phpdoc.xml export-ignore
 /phpunit.xml.dist export-ignore
 /tests/ export-ignore
