--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -40,10 +40,12 @@ jobs:
                   restore-keys: ${{ runner.os }}-composer-
             - name: Install dependencies
               run: composer install --prefer-dist --no-progress --no-suggest --ignore-platform-reqs
-            - name: PHPUnit
-              run: php -dpcov.directory=. -dpcov.enabled=1 -dpcov.exclude="~vendor~" ./vendor/bin/phpunit --stop-on-error --coverage-clover=coverage.xml
             - name: Check CS
               run: composer cs-check
+            - name: PHP Compatibility Check
+              run: composer compat-check
+            - name: PHPUnit
+              run: php -dpcov.directory=. -dpcov.enabled=1 -dpcov.exclude="~vendor~" ./vendor/bin/phpunit --stop-on-error --coverage-clover=coverage.xml
             - name: Upload Coverage to CodeCov
               uses: codecov/codecov-action@v1
               with:
