--- a/composer.json
+++ b/composer.json
@@ -25,9 +25,9 @@
         "ext-json": "*",
         "ext-mbstring": "*",
         "guzzlehttp/guzzle": "^6.3",
+        "laminas/laminas-escaper": "^2.6",
         "psr/cache": "^1.0",
-        "symfony/cache": "^4",
-        "laminas/laminas-escaper": "^2.6"
+        "symfony/cache": "^4"
     },
     "suggest": {
         "ext-apc": "APCu is used as the default cache if it is available"
@@ -37,9 +37,10 @@
     },
     "require-dev": {
         "roave/security-advisories":"dev-master",
+        "phpcompatibility/php-compatibility": "^9.3",
         "phpstan/phpstan": "^0.12",
         "phpunit/phpunit": "^9",
-        "squizlabs/php_codesniffer": "^3.2"
+        "squizlabs/php_codesniffer": "^3.5"
     },
     "extra": {
         "branch-alias": {
@@ -51,6 +52,7 @@
             "@cs-check",
             "@test"
         ],
+        "compat-check": "vendor/bin/phpcs -ns -p ./src/ --standard=PHPCompatibility",
         "cs-check": "phpcs",
         "cs-fix": "phpcbf",
         "test": "phpunit --colors=always",
