--- a/composer.json
+++ b/composer.json
@@ -36,10 +36,11 @@
         "prismic/php-sdk": "*"
     },
     "require-dev": {
-        "roave/security-advisories":"dev-master",
+        "dealerdirect/phpcodesniffer-composer-installer": "^0.6.2",
         "phpcompatibility/php-compatibility": "^9.3",
         "phpstan/phpstan": "^0.12",
         "phpunit/phpunit": "^9",
+        "roave/security-advisories": "dev-master",
         "squizlabs/php_codesniffer": "^3.5"
     },
     "extra": {
